force-app/main/default/objects/PurchaseExperience__c/PurchaseExperience__c.object-meta.xml
<CustomObject>
    <label>買取実績</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>買取実績No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>