force-app/main/default/objects/PurchaseExperience__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>PurchaseOpportunity__r.Account__r.Name</formula>
    <label>仕入先</label>
    <type>Text</type>
</CustomField>