force-app/main/default/objects/PurchaseExperience__c/fields/arariyosou__c.field-meta.xml
<CustomField>
    <fullName>arariyosou__c</fullName>
    <formula>PurchaseOpportunity__r.GrossProfitForecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>粗利予想</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>