force-app/main/default/objects/PurchaseExperience__c/fields/AssessmentCount__c.field-meta.xml
<CustomField>
    <fullName>AssessmentCount__c</fullName>
    <label>査定台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>