force-app/main/default/objects/PurchaseExperience__c/fields/BudgetActualType__c.field-meta.xml
<CustomField>
    <fullName>BudgetActualType__c</fullName>
    <label>予実区分</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>予算</fullName>
                <default>true</default>
                <label>ノルマ</label>
            </value>
            <value>
                <fullName>給与予算</fullName>
            </value>
            <value>
                <fullName>実績</fullName>
                <color>#78C953</color>
                <label>実績</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>