force-app/main/default/objects/PurchaseExperience__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>売り先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>