force-app/main/default/objects/PurchaseExperience__c/fields/Call_ABC__c.field-meta.xml
<CustomField>
    <fullName>Call_ABC__c</fullName>
    <formula>PurchaseOpportunity__r.ABC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>コールABC区分</label>
    <type>Text</type>
</CustomField>