force-app/main/default/objects/PurchaseExperience__c/fields/CarModel__c.field-meta.xml
<CustomField>
    <fullName>CarModel__c</fullName>
    <formula>IF(  ISBLANK( PurchaseOpportunity__r.Mst_Models__c ), PurchaseOpportunity__r.CarName__c ,PurchaseOpportunity__r.Mst_Models__r.Name )</formula>
    <label>車名</label>
    <type>Text</type>
</CustomField>