force-app/main/default/objects/PurchaseExperience__c/fields/CompanyType__c.field-meta.xml
<CustomField>
    <fullName>CompanyType__c</fullName>
    <label>法人区分</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BudgetActualType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>一般</fullName>
            </value>
            <value>
                <fullName>法人</fullName>
            </value>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>法人1</fullName>
            </value>
            <value>
                <fullName>法人2</fullName>
            </value>
            <value>
                <fullName>法人(営業)</fullName>
            </value>
            <value>
                <fullName>法人3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>