force-app/main/default/objects/PurchaseExperience__c/fields/ContactCount__c.field-meta.xml
<CustomField>
    <fullName>ContactCount__c</fullName>
    <label>接触件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>