force-app/main/default/objects/PurchaseExperience__c/fields/DateCount_Sales__c.field-meta.xml
<CustomField>
    <fullName>DateCount_Sales__c</fullName>
    <formula>SalesDate__c  -  PurchaseOpportunity__r.PurchaseDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所要日数（買取→売上）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>