force-app/main/default/objects/PurchaseExperience__c/fields/DateCountSales2__c.field-meta.xml
<CustomField>
    <fullName>DateCountSales2__c</fullName>
    <formula>SalesDate__c  -  PurchaseOpportunity__r.AssessmentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所要日数（査定→売上）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>