force-app/main/default/objects/PurchaseExperience__c/fields/Deficit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Deficit_Detail__c</fullName>
    <formula>PurchaseOpportunity__r.Deficit_Detail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>赤字詳細・対応</label>
    <type>Text</type>
</CustomField>