force-app/main/default/objects/PurchaseExperience__c/fields/Deficit_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Deficit_Reason_Text__c</fullName>
    <formula>TEXT(PurchaseOpportunity__r.Deficit_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>赤字理由</label>
    <type>Text</type>
</CustomField>