force-app/main/default/objects/PurchaseExperience__c/fields/DeficitAmount__c.field-meta.xml
<CustomField>
    <fullName>DeficitAmount__c</fullName>
    <formula>IF(OR( Buyer__c=&quot;過去調整用&quot;, Buyer__c =&quot;利益折半&quot;),0,
IF( Profits__c &lt;=0,Profits__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>赤字金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>