force-app/main/default/objects/PurchaseExperience__c/fields/DeficitCount__c.field-meta.xml
<CustomField>
    <fullName>DeficitCount__c</fullName>
    <formula>IF(  Profits__c   &gt;= 0,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>赤字カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>