force-app/main/default/objects/PurchaseExperience__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>部署</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>法人営業部</fullName>
            </value>
            <value>
                <fullName>札幌支店</fullName>
            </value>
            <value>
                <fullName>盛岡支店</fullName>
            </value>
            <value>
                <fullName>仙台支店</fullName>
            </value>
            <value>
                <fullName>水戸支店</fullName>
            </value>
            <value>
                <fullName>栃木支店</fullName>
            </value>
            <value>
                <fullName>群馬支店</fullName>
            </value>
            <value>
                <fullName>埼玉支店</fullName>
            </value>
            <value>
                <fullName>千葉支店</fullName>
            </value>
            <value>
                <fullName>東京支店</fullName>
            </value>
            <value>
                <fullName>横浜支店</fullName>
            </value>
            <value>
                <fullName>新潟支店</fullName>
            </value>
            <value>
                <fullName>金沢支店</fullName>
            </value>
            <value>
                <fullName>長野支店</fullName>
            </value>
            <value>
                <fullName>静岡支店</fullName>
            </value>
            <value>
                <fullName>名古屋支店</fullName>
            </value>
            <value>
                <fullName>岐阜支店</fullName>
            </value>
            <value>
                <fullName>京都支店</fullName>
            </value>
            <value>
                <fullName>大阪支店</fullName>
            </value>
            <value>
                <fullName>兵庫支店</fullName>
            </value>
            <value>
                <fullName>高松支店</fullName>
            </value>
            <value>
                <fullName>鳥取支店</fullName>
            </value>
            <value>
                <fullName>広島支店</fullName>
            </value>
            <value>
                <fullName>福岡支店</fullName>
            </value>
            <value>
                <fullName>熊本支店</fullName>
            </value>
            <value>
                <fullName>鹿児島支店</fullName>
            </value>
            <value>
                <fullName>沖縄支店</fullName>
            </value>
            <value>
                <fullName>査定課</fullName>
            </value>
            <value>
                <fullName>コールセンター課</fullName>
            </value>
            <value>
                <fullName>コール(REUSE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>