force-app/main/default/objects/PurchaseExperience__c/fields/Estimate_Difference__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Difference__c</fullName>
    <formula>SalesAmount__c - PurchaseOpportunity__r.Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売り予想差異</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>