force-app/main/default/objects/PurchaseExperience__c/fields/Estimate_Difference_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Difference_Assessment__c</fullName>
    <description>長谷川</description>
    <formula>SalesAmount__c - PurchaseOpportunity__r.Estimate_Assessment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>査定課売り予想差異</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>