force-app/main/default/objects/PurchaseExperience__c/fields/experience_shift__c.field-meta.xml
<CustomField>
    <fullName>experience_shift__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Experience_shift__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>実績スライド分</label>
    <type>Checkbox</type>
</CustomField>