force-app/main/default/objects/PurchaseExperience__c/fields/GrossProfitMargin__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitMargin__c</fullName>
    <formula>Profits__c/SalesAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>粗利率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>