force-app/main/default/objects/PurchaseExperience__c/fields/ID_18__c.field-meta.xml
<CustomField>
    <fullName>ID_18__c</fullName>
    <description>山本</description>
    <formula>CASESAFEID (Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>買取実績ID（18ケタ）</label>
    <type>Text</type>
</CustomField>