force-app/main/default/objects/PurchaseExperience__c/fields/keisanyourieki__c.field-meta.xml
<CustomField>
    <fullName>keisanyourieki__c</fullName>
    <formula>IF ( ISNULL( Profits__c )  ,   PurchaseOpportunity__r.GrossProfitForecast__c , Profits__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>計算用利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>