force-app/main/default/objects/PurchaseExperience__c/fields/Lot_number__c.field-meta.xml
<CustomField>
    <fullName>Lot_number__c</fullName>
    <description>作成喜多。集計管理から出されるロット番号(SF)と連携。ロット番号記録用</description>
    <externalId>true</externalId>
    <label>ロット番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>