force-app/main/default/objects/PurchaseExperience__c/fields/LotNo__c.field-meta.xml
<CustomField>
    <fullName>LotNo__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Lot_CorporationID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ロット番号(数式)</label>
    <type>Text</type>
</CustomField>