force-app/main/default/objects/PurchaseExperience__c/fields/MarkedCallCenter__c.field-meta.xml
<CustomField>
    <fullName>MarkedCallCenter__c</fullName>
    <formula>PurchaseOpportunity__r.IsCallCenter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>コールセンター経由</label>
    <type>Checkbox</type>
</CustomField>