force-app/main/default/objects/PurchaseExperience__c/fields/ModelYaerCarName__c.field-meta.xml
<CustomField>
    <fullName>ModelYaerCarName__c</fullName>
    <formula>PurchaseOpportunity__r.ModelYearCarName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年式・車名</label>
    <type>Text</type>
</CustomField>