force-app/main/default/objects/PurchaseExperience__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <formula>IF(ISBLANK(TEXT(PurchaseOpportunity__r.ModelYearPickList__c)),
PurchaseOpportunity__r.ModelYear__c
,
TEXT(PurchaseOpportunity__r.ModelYearPickList__c)
)</formula>
    <label>年式</label>
    <type>Text</type>
</CustomField>