force-app/main/default/objects/PurchaseExperience__c/fields/NewAssessmentCount__c.field-meta.xml
<CustomField>
    <fullName>NewAssessmentCount__c</fullName>
    <label>新規査定台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>