force-app/main/default/objects/PurchaseExperience__c/fields/NewContactCount__c.field-meta.xml
<CustomField>
    <fullName>NewContactCount__c</fullName>
    <label>新規接触件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>