force-app/main/default/objects/PurchaseExperience__c/fields/NewPurchaseCount__c.field-meta.xml
<CustomField>
    <fullName>NewPurchaseCount__c</fullName>
    <label>新規買取台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>