force-app/main/default/objects/PurchaseExperience__c/fields/Past_adjustment_details__c.field-meta.xml
<CustomField>
    <fullName>Past_adjustment_details__c</fullName>
    <description>過去調整の詳細を取り込む項目。山本</description>
    <label>過去調整詳細</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>