force-app/main/default/objects/PurchaseExperience__c/fields/Profits_Differencce__c.field-meta.xml
<CustomField>
    <fullName>Profits_Differencce__c</fullName>
    <formula>Profits__c - arariyosou__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>粗利予想差異</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>