force-app/main/default/objects/PurchaseExperience__c/fields/Profits_SalesExperience__c.field-meta.xml
<CustomField>
    <fullName>Profits_SalesExperience__c</fullName>
    <description>山本</description>
    <formula>IF( TEXT( PurchaseOpportunity__r.Retail_Overseas_category__c ) &lt;&gt;&quot;&quot;,  PurchaseOpportunity__r.Profits_retail_overseas__c  ,  Profits__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>利益(営業実績)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>