force-app/main/default/objects/PurchaseExperience__c/fields/PurchaseAmount_SalesExperience__c.field-meta.xml
<CustomField>
    <fullName>PurchaseAmount_SalesExperience__c</fullName>
    <description>山本</description>
    <formula>IF( TEXT( PurchaseOpportunity__r.Retail_Overseas_category__c ) &lt;&gt;&quot;&quot;, PurchaseOpportunity__r.PurchaseAmount_retail_overseas__c , PurchaseAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仕入金額(営業実績)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>