force-app/main/default/objects/PurchaseExperience__c/fields/PurchaseNumber__c.field-meta.xml
<CustomField>
    <fullName>PurchaseNumber__c</fullName>
    <label>買取台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>