force-app/main/default/objects/PurchaseExperience__c/fields/Retail_Overseas_category__c.field-meta.xml
<CustomField>
    <fullName>Retail_Overseas_category__c</fullName>
    <description>山本</description>
    <formula>TEXT( PurchaseOpportunity__r.Retail_Overseas_category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>小売/海外区分</label>
    <type>Text</type>
</CustomField>