force-app/main/default/objects/PurchaseExperience__c/fields/Role_formula__c.field-meta.xml
<CustomField>
    <fullName>Role_formula__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ロール名（数式）</label>
    <type>Text</type>
</CustomField>