force-app/main/default/objects/PurchaseExperience__c/fields/Sales_staff__c.field-meta.xml
<CustomField>
    <fullName>Sales_staff__c</fullName>
    <description>作成喜多。集計管理から出される営業担当(SF)と連携</description>
    <label>営業担当</label>
    <length>20</length>
    <type>Text</type>
</CustomField>