force-app/main/default/objects/PurchaseExperience__c/fields/SalesDestination__c.field-meta.xml
<CustomField>
    <fullName>SalesDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>買取実績</relationshipLabel>
    <relationshipName>PurchaseExperience</relationshipName>
    <type>Lookup</type>
</CustomField>