force-app/main/default/objects/PurchaseExperience__c/fields/SalesMonthSummary__c.field-meta.xml
<CustomField>
    <fullName>SalesMonthSummary__c</fullName>
    <formula>MONTH(SalesDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上計上月度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>