force-app/main/default/objects/PurchaseExperience__c/fields/Sameas_AssessmentUser__c.field-meta.xml
<CustomField>
    <fullName>Sameas_AssessmentUser__c</fullName>
    <formula>Owner:User.LastName &amp; Owner:User.FirstName = PurchaseOpportunity__r.AssessmentUser__r.LastName &amp; PurchaseOpportunity__r.AssessmentUser__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>査定担当者と一致</label>
    <type>Checkbox</type>
</CustomField>