force-app/main/default/objects/PurchaseExperience__c/fields/syataiNO__c.field-meta.xml
<CustomField>
    <fullName>syataiNO__c</fullName>
    <formula>PurchaseOpportunity__r.CarNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車台番号</label>
    <type>Text</type>
</CustomField>