force-app/main/default/objects/PurchaseExperience__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BudgetActualType__c</columns>
    <columns>Buyer__c</columns>
    <columns>SalesDate__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Profits__c</columns>
    <columns>PurchaseNumber__c</columns>
    <columns>Department__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BudgetActualType__c</field>
        <operation>equals</operation>
        <value>実績</value>
    </filters>
    <label>10. 実績</label>
</ListView>