force-app/main/default/objects/PurchaseExperience__c/listViews/kyuuyoyosan.listView-meta.xml
<ListView>
    <fullName>kyuuyoyosan</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SalesMonthSummary__c</columns>
    <columns>BudgetActualType__c</columns>
    <columns>SalesDate__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Profits__c</columns>
    <columns>PurchaseNumber__c</columns>
    <columns>Department__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>BudgetActualType__c</field>
        <operation>equals</operation>
        <value>給与予算</value>
    </filters>
    <label>00. 私の給与予算</label>
</ListView>