force-app/main/default/objects/PurchaseExperience__c/listViews/norma_currentmanth.listView-meta.xml
<ListView>
    <fullName>norma_currentmanth</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>SalesMonthSummary__c</columns>
    <columns>BudgetActualType__c</columns>
    <columns>SalesDate__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Profits__c</columns>
    <columns>PurchaseNumber__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BudgetActualType__c</field>
        <operation>equals</operation>
        <value>予算</value>
    </filters>
    <filters>
        <field>SalesDate__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>notContain</operation>
        <value>目標値,期待値</value>
    </filters>
    <label>02. 当月度ノルマ</label>
</ListView>