force-app/main/default/objects/PurchaseExperience__c/listViews/X10.listView-meta.xml
<ListView>
    <fullName>X10</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SalesMonthSummary__c</columns>
    <columns>BudgetActualType__c</columns>
    <columns>SalesDate__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Profits__c</columns>
    <columns>PurchaseNumber__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BudgetActualType__c</field>
        <operation>equals</operation>
        <value>予算</value>
    </filters>
    <label>01. ノルマ</label>
</ListView>