force-app/main/default/objects/PurchaseExperience__c/listViews/X1010.listView-meta.xml
<ListView>
    <fullName>X1010</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SalesMonthSummary__c</columns>
    <columns>SalesDate__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Profits__c</columns>
    <columns>PurchaseNumber__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BudgetActualType__c</field>
        <operation>equals</operation>
        <value>予算,ノルマ</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>期待値,目標値</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>札幌</value>
    </filters>
    <label>1010.札幌支店目標値・期待値</label>
</ListView>