force-app/main/default/objects/PurchaseExperience__c/listViews/X111.listView-meta.xml
<ListView>
    <fullName>X111</fullName>
    <columns>NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>ModelYaerCarName__c</columns>
    <columns>Account__c</columns>
    <columns>Buyer__c</columns>
    <columns>SalesDate__c</columns>
    <columns>PurchaseAmount__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Profits__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BudgetActualType__c</field>
        <operation>equals</operation>
        <value>実績</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>中古車小売事業部</value>
    </filters>
    <label>U00061. 小売事業部の実績</label>
</ListView>