force-app/main/default/objects/PurchaseExperience__c/listViews/X1110.listView-meta.xml
<ListView>
    <fullName>X1110</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SalesMonthSummary__c</columns>
    <columns>SalesDate__c</columns>
    <columns>SalesAmount__c</columns>
    <columns>Profits__c</columns>
    <columns>PurchaseNumber__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BudgetActualType__c</field>
        <operation>equals</operation>
        <value>予算</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>期待値,目標値</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>埼玉</value>
    </filters>
    <label>1110.埼玉支店目標値・期待値</label>
</ListView>